# xenon-firmware

./: Cargo.toml  LICENSE-MIT  README.md  cfg.toml  espflash.toml  partitions.csv
.cargo/: config.toml
assets/: test-app.wasm  xenon-test-app.wasm
proc-macros/: Cargo.toml
proc-macros/src/: error.rs  expand.rs  lib.rs
src/: allocator.rs  float.rs  fs.rs  fs_old.rs  logger.rs  macros.rs  main.rs
src/app/: convert.rs  cpu.rs  mod.rs  types.rs
src/app/syscall/: asynch.rs  io.rs  misc.rs  mod.rs  panic.rs  rng.rs  stdio.rs  time.rs
src/app/syscall/widget/: bitmap.rs  mod.rs  primitive.rs
src/app/types/: error.rs  io.rs  mod.rs  wasm.rs
src/app/wasm/: mod.rs  types.rs
src/app/wasm/syscall/: asynch.rs  misc.rs  mod.rs  panic.rs  rng.rs  stdio.rs
src/app/wasm/syscall/widget/: bitmap.rs  mod.rs  primitive.rs
src/driver/: lcd.rs  mod.rs  shell.rs
src/fs/: mod.rs  node.rs  storage.rs
src/widget/: bitmap.rs  button.rs  collections.rs  misc.rs  mod.rs
src/widget/text/: font.rs  layout.rs  mod.rs  util.rs
