[package]
name = "xenon-firmware"
version = "0.1.0"
authors = ["Factorial <27factorial@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bitflags = "2.6.0"
bstr = { version = "1.10.0", default-features = false, features = [
    "alloc",
    "unicode",
] }
critical-section = "1.1.2"
downcast-rs = { version = "1.2.1", default-features = false }
embassy-embedded-hal = "0.2.0"
embassy-executor = { version = "0.6.1" }
embassy-futures = "0.1.1"
embassy-sync = "0.6.0"
embassy-time = { version = "0.3.1", default-features = false }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32s3", "octal-psram"] }
esp-hal-embassy = { version = "0.4.0", features = [
    "esp32s3",
    "integrated-timers",
] }
esp-println = { version = "0.12.0", features = ["esp32s3"] }
esp-storage = { version = "0.3.0", features = ["esp32s3", "nor-flash"] }
esp-wifi = { version = "0.10.1", default-features = false, features = ["async", "ble", "esp32s3", "phy-enable-usb", "ps-max-modem"] }
fugit = "0.3.7"
hashbrown = { version = "0.15.0", default-features = false, features = [
    "serde",
] }
heapless = { version = "0.7.17", features = ["serde"] }
itertools = { version = "0.13.0", default-features = false }
libm = "0.2.8"
linked_list_allocator = "0.10.5"
log = { version = "0.4.21" }
miniz_oxide = { version = "0.8.0", default-features = false, features = [
    "with-alloc",
] }
paste = "1.0.15"
postcard = { version = "1.0.10", default-features = false, features = [
    "alloc",
    "experimental-derive",
    "heapless",
] }
rustc-hash = { version = "2.0.0", default-features = false }
sequential-storage = "3.0.1"
serde = { version = "1.0.209", features = [
    "alloc",
    "derive",
], default-features = false }
spin = { version = "0.9.8", features = ["ticket_mutex"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
thiserror = { version = "1.0.50", package = "thiserror-core", default-features = false }
trouble-host = { git = "https://github.com/embassy-rs/trouble", version = "0.1.0" }
wasmi = { version = "0.37.2", features = [
    "extra-checks",
], default-features = false }
xenon-proc-macros = { path = "./proc-macros" }
xtensa-lx = "0.9.0"
zerocopy = { version = "0.8.6", features = ["derive"] }

[profile.dev]
# Size optimization (dev builds can get large and are *SLOW*)
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 3
overflow-checks = false
# 718,864
